--- a/deployment/powerflex-ansible/powerflex-lia.yaml
+++ b/deployment/powerflex-ansible/powerflex-lia.yaml
@@ -1,7 +1,7 @@
-heat_template_version: queens
+heat_template_version: rocky
 
 description: >
-  VxFlexOS MDM Service
+  PowerFlex LIA service.
 
 parameters:
   ServiceData:
@@ -32,8 +32,8 @@ parameters:
     type: json
 
 resources:
-  VxFlexOSBase:
-    type: ./vxflexos-base.yaml
+  PowerflexBase:
+    type: ./powerflex-base.yaml
     properties:
       ServiceData: {get_param: ServiceData}
       ServiceNetMap: {get_param: ServiceNetMap}
@@ -42,28 +42,41 @@ resources:
       RoleName: {get_param: RoleName}
       RoleParameters: {get_param: RoleParameters}
 
+  PowerflexLiaAnsibleVars:
+    type: OS::Heat::Value
+    properties:
+      type: json
+      value:
+        vars: {}
+
 outputs:
   role_data:
-    description: Role data for the VxFlexOS MDM service.
+    description: Role data for the PowerFlex LIA service.
     value:
-      service_name: vxflexos_mdm
-      upgrade_tasks:
+      service_name: powerflex_lia
+      upgrade_tasks: []
       puppet_config:
         config_image: ''
         config_volume: ''
         step_config: ''
       docker_config: {}
-      workflow_tasks:  {get_attr: [VxFlexOSBase, role_data, workflow_tasks]}
+      external_deploy_tasks:
+        list_concat:
+        - {get_attr: [PowerflexBase, role_data, external_deploy_tasks]}
+        - - name: powerflex_lia_external_deploy_init
+            when: step|int == 1
+            block:
+              - name: set powerflex-ansible group vars lias
+                set_fact:
+                  powerflex_ansible_group_vars_lias: {get_attr: [PowerflexLiaAnsibleVars, value, vars]}
+      external_update_tasks: {}
+      external_upgrade_tasks: {}
       config_settings: 
         map_merge:
-        - tripleo.vxflexos_mdm.firewall_rules:
-            '200 vxflexos_mdm_listener':
+        - tripleo::powerflex_lias::firewall_rules:
+            '201 powerlex_lia':
               dport:
-              - '6611'
-            '201 vxflexos_mdm_cluster':
-              dport:
-              - '9011'
-        - vxflexos_mdm_ansible_vars:
-            map_merge:
-            - {get_attr: [VxFlexOSBase, role_data, config_settings, vxflexos_common_ansible_vars]}
+                list_concat:
+                  - - '9099'
+        - {}
 
