--- a/deployment/powerflex-ansible/powerflex-mdm.yaml
+++ b/deployment/powerflex-ansible/powerflex-mdm.yaml
@@ -1,7 +1,7 @@
-heat_template_version: queens
+heat_template_version: rocky
 
 description: >
-  VxFlexOS LIA Service
+  PowerFlex MDM service.
 
 parameters:
   ServiceData:
@@ -32,8 +32,8 @@ parameters:
     type: json
 
 resources:
-  VxFlexOSBase:
-    type: ./vxflexos-base.yaml
+  PowerflexBase:
+    type: ./powerflex-base.yaml
     properties:
       ServiceData: {get_param: ServiceData}
       ServiceNetMap: {get_param: ServiceNetMap}
@@ -42,25 +42,43 @@ resources:
       RoleName: {get_param: RoleName}
       RoleParameters: {get_param: RoleParameters}
 
+  PowerflexMdmAnsibleVars:
+    type: OS::Heat::Value
+    properties:
+      type: json
+      value:
+        vars: {}
+
 outputs:
   role_data:
-    description: Role data for the VxFlexOS LIA service.
+    description: Role data for the PowerFlex MDM service.
     value:
-      service_name: vxflexos_lia
-      upgrade_tasks:
+      service_name: powerflex_mdm
+      upgrade_tasks: []
       puppet_config:
         config_image: ''
         config_volume: ''
         step_config: ''
       docker_config: {}
-      workflow_tasks:  {get_attr: [VxFlexOSBase, role_data, workflow_tasks]}
-      config_settings:
+      external_deploy_tasks: 
+        list_concat:
+        - {get_attr: [PowerflexBase, role_data, external_deploy_tasks]}
+        - - name: powerflex_mdm_external_deploy_init
+            when: step|int == 1
+            block:
+              - name: set powerflex-ansible group vars mdms
+                set_fact:
+                  powerflex_ansible_group_vars_mdms: {get_attr: [PowerflexMdmAnsibleVars, value, vars]}
+
+      external_update_tasks: {}
+      external_upgrade_tasks: {}
+      config_settings: 
         map_merge:
-        - tripleo.vxflexos_lia.firewall_rules:
-            '202 vxflexos_lia_listener':
+        - tripleo::powerflex_mdm::firewall_rules:
+            '200 powerflex_mdm':
               dport:
-              - '9099'
-        - vxflexos_lia_ansible_vars:
-            map_merge:
-            - {get_attr: [VxFlexOSBase, role_data, config_settings, vxflexos_common_ansible_vars]}
-      
+                list_concat:
+                  - - '6611'
+                  - - '9011'
+        - {}
+
