--- a/deployment/powerflex-ansible/powerflex-sdc.yaml
+++ b/deployment/powerflex-ansible/powerflex-sdc.yaml
@@ -1,7 +1,7 @@
-heat_template_version: queens
+heat_template_version: rocky
 
 description: >
-  VxFlexOS SDC Service
+  PowerFlex SDC service.
 
 parameters:
   ServiceData:
@@ -32,8 +32,8 @@ parameters:
     type: json
 
 resources:
-  VxFlexOSBase:
-    type: ./vxflexos-base.yaml
+  PowerflexBase:
+    type: ./powerflex-base.yaml
     properties:
       ServiceData: {get_param: ServiceData}
       ServiceNetMap: {get_param: ServiceNetMap}
@@ -42,20 +42,34 @@ resources:
       RoleName: {get_param: RoleName}
       RoleParameters: {get_param: RoleParameters}
 
+  PowerflexSdcAnsibleVars:
+    type: OS::Heat::Value
+    properties:
+      type: json
+      value:
+        vars: {}
+
 outputs:
   role_data:
-    description: Role data for the VxFlexOS SDC service.
+    description: Role data for the PowerFlex SDC service.
     value:
-      service_name: vxflexos_sdc
-      upgrade_tasks:
+      service_name: powerflex_sdc
+      upgrade_tasks: []
       puppet_config:
         config_image: ''
         config_volume: ''
         step_config: ''
       docker_config: {}
-      workflow_tasks:  {get_attr: [VxFlexOSBase, role_data, workflow_tasks]}
-      config_settings:
-        vxflexos_sdc_ansible_vars:
-          map_merge:
-          - {get_attr: [VxFlexOSBase, role_data, config_settings, vxflexos_common_ansible_vars]}
-      
+      external_deploy_tasks: 
+        list_concat:
+        - {get_attr: [PowerflexBase, role_data, external_deploy_tasks]}
+        - - name: powerflex_sdc_external_deploy_init
+            when: step|int == 1
+            block:
+              - name: set powerflex-ansible group vars sdcs
+                set_fact:
+                  powerflex_ansible_group_vars_sdcs: {get_attr: [PowerflexSdcAnsibleVars, value, vars]}
+
+      external_update_tasks: {}
+      external_upgrade_tasks: {}
+      config_settings: {}
