--- a/powerflex-ansible/roles/powerflex-facts/tasks/facts.yaml
+++ b/powerflex-ansible/roles/powerflex-facts/tasks/facts.yaml
@@ -53,3 +53,7 @@
 - name: Set the spare policy based upon SDSs count
   set_fact:
     spare_policy_pct: "{{ ((100 / sds_count | int) | round) | int }}"
+
+- name: Check installed RPMS
+  package_facts:
+    manager: auto
